--- a/attendnow/attendance/templates/attendance/home.html
+++ b/attendnow/attendance/templates/attendance/home.html
@@ -3,13 +3,13 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+
 <div class="container" style="background: white; padding: 20px;">
 
     <section id="home" class="section" style="padding: 20px; background: white;">
         <div class="card" style="box-shadow: 0 4px 6px rgba(0,0,0,0.1); padding: 20px; margin-bottom: 20px;">
             <h1>Welcome to AttendNow</h1>
             <p>AttendNow simplifies attendance tracking through advanced facial recognition technology.</p>
-            <a href="{% url 'sign_in' %}" class="btn btn-primary btn-lg rounded-pill">Get Started</a>
         </div>
     </section>
 
@@ -51,7 +51,7 @@
         <div class="card" style="box-shadow: 0 4px 6px rgba(0,0,0,0.1); padding: 20px; margin-bottom: 20px;">
             <h1>Get Started</h1>
             <p>Ready to streamline your attendance process? Get started with AttendNow today and experience the convenience and efficiency of advanced facial recognition technology.</p>
-            <a href="{% url 'sign_up' %}" class="btn btn-primary btn-lg rounded-pill">Sign Up</a>
+            <a href="{% url 'sign_up' %}" style="background-color: #001A2F" class="btn btn-primary btn-lg rounded-pill">Sign Up</a>
         </div>
     </section>
 
